--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
         </div>
     </button>
     
-    <nav class="nav"></nav>
+    <nav class="nav">
+        <div class="nav__items">
+            <a href="#" class="nav__item">Home</a>
+            <a href="#" class="nav__item">About</a>
+            <a href="#" class="nav__item">Portfolio</a>
+            <a href="#" class="nav__item">Offer</a>
+            <a href="#" class="nav__item">Contact</a>
+        </div>
+    </nav>
     <header class="header">
         <div id="header-animation" class="header__animation"></div>
         <div class="header__box-one">
