--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <img src="/img/header-img-big.png" alt="Authors photo" class="header__img-big">
     </header>
     <script src="/particles/particles.min.js"></script>
+    <script src="js/particles-animation.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
