Section technologies done

--- a/about.html
+++ b/about.html
@@ -27,13 +27,12 @@
     <nav class="nav">
         <div class="nav__items">
             <a href="index.html" class="nav__item">Home</a>
-            <a href="#" class="nav__item">About</a>
+            <a href="#" class="nav__item">About Me</a>
             <a href="#" class="nav__item">Portfolio</a>
             <a href="#" class="nav__item">Offer</a>
             <a href="#" class="nav__item">Contact</a>
         </div>
-    </nav>
-    
+    </nav>  
     <section class="about">
         <h1 class="about__title">About <span class="blue-color">Me</span></h1>
         <p class="about__text">Get to know <span class="blue-color">me.</span></p>
@@ -46,6 +45,33 @@
             <img class="about__wrapper__img" src="/img/damian-img.png" alt="Black and white Damians photo">   
         </div>
     </section>
+        
+    <section class="technologies">
+        <h2 class="technologies__title">What <span class="blue-color">Technologies <br>I</span> Use</h2>
+
+        <div class="technologies__wrapper">
+            <div class="technologies__wrapper__container">
+                <i class="technologies__wrapper__container__icon fab fa-html5"></i>
+                <i class="technologies__wrapper__container__icon fab fa-css3-alt"></i>
+                <i class="technologies__wrapper__container__icon fab fa-js-square"></i>
+                <i class="technologies__wrapper__container__icon fab fa-bootstrap"></i>
+            </div>
+            <div class="technologies__wrapper__container">
+                <i class="technologies__wrapper__container__icon fab fa-sass"></i>
+                <i class="technologies__wrapper__container__icon fab fa-gulp"></i>
+                <i class="technologies__wrapper__container__icon fab fa-git-alt"></i>
+                <i class="technologies__wrapper__container__icon fab fa-wordpress"></i>
+            </div>
+            <div class="technologies__wrapper__container">
+                <i class="technologies__wrapper__container__icon fas fa-couch"></i>
+                <i class="technologies__wrapper__container__icon fas fa-database"></i>
+                <i class="technologies__wrapper__container__icon fab fa-php"></i>
+            </div>
+        </div>
+    </section>
+
+
+
 
     <script src="js/script.js"></script>
 </body>
