--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="nav">
         <div class="nav__items">
             <a href="#" class="nav__item">Home</a>
-            <a href="about.html" class="nav__item">About</a>
+            <a href="about.html" class="nav__item">About Me</a>
             <a href="#" class="nav__item">Portfolio</a>
             <a href="#" class="nav__item">Offer</a>
             <a href="#" class="nav__item">Contact</a>
@@ -39,10 +39,10 @@
             <p class="header__box-one__text">I'm a <span class="blue-color txt-rotate" data-period="2000" data-rotate='[ "Frontend Developer.", "Freelancer.", "Social Media Marketer." ]'></span></p>
         </div>
         <div class="header__box-two">
-            <a href="https://www.facebook.com/mmroowa"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://www.instagram.com/pllatko"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/damian-p%C5%82atek-0187821b3/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/damianpllatek"><i class="fab fa-github"></i></a>
+            <a href="https://www.facebook.com/mmroowa"><i class="fab fa-facebook-square"></i> </a>
+            <a href="https://www.instagram.com/pllatko"><i class="fab fa-instagram"></i> </a>
+            <a href="https://www.linkedin.com/in/damian-p%C5%82atek-0187821b3/"><i class="fab fa-linkedin"></i> </a>
+            <a href="https://github.com/damianpllatek"><i class="fab fa-github"></i> </a>
         </div>
         <img src="/img/header-img-md.png" alt="Authors photo" class="header__img-md">
         <img src="/img/header-img-big.png" alt="Authors photo" class="header__img-big">
