--- a/about.html
+++ b/about.html
@@ -35,8 +35,7 @@
     </nav>  
     <section class="about">
         <h1 class="about__title">About <span class="blue-color">Me</span></h1>
-        <p class="about__text">Get to know <span class="blue-color">me.</span></p>
-        
+        <p class="about__text">Get to know <span class="blue-color">me.</span></p>      
         <div class="about__wrapper">
             <div class="about__wrapper__text">
                 <p class="about__wrapper__text__one">I'm 29 years old creative <span class="blue-color">junior frontend developer</span> from Cracow, Poland.</p>
@@ -44,8 +43,7 @@
             </div>
             <img class="about__wrapper__img" src="/img/damian-img.png" alt="Black and white Damians photo">   
         </div>
-    </section>
-        
+    </section>      
     <section class="technologies">
         <h2 class="technologies__title">What <span class="blue-color">Technologies <br>I</span> Use</h2>
 
@@ -58,9 +56,9 @@
             </div>
             <div class="technologies__wrapper__container">
                 <i class="technologies__wrapper__container__icon fab fa-sass"></i>
+                <i class="technologies__wrapper__container__icon fab fa-wordpress"></i>
                 <i class="technologies__wrapper__container__icon fab fa-gulp"></i>
                 <i class="technologies__wrapper__container__icon fab fa-git-alt"></i>
-                <i class="technologies__wrapper__container__icon fab fa-wordpress"></i>
             </div>
             <div class="technologies__wrapper__container">
                 <i class="technologies__wrapper__container__icon fas fa-couch"></i>
@@ -70,7 +68,9 @@
         </div>
     </section>
 
-
+    <footer class="footer">
+        <p class="footer__text">&copy; Damian Płatek. All rights reserved.</p>
+    </footer>
 
 
     <script src="js/script.js"></script>
