--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <div class="nav__items">
             <a href="index.html" class="nav__item">Home</a>
             <a href="#" class="nav__item">About Me</a>
-            <a href="#" class="nav__item">Portfolio</a>
+            <a href="portfolio.html" class="nav__item">Portfolio</a>
             <a href="#" class="nav__item">Offer</a>
             <a href="#" class="nav__item">Contact</a>
         </div>
