Section portfolio ended

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,7 @@
                 <div class="portfolio__container__left-box__image">
                     <a href="http://www.vitalstudio.krakow.pl" rel="noopener" target="_blank" class="portfolio__container__left-box__image__link">
                         <img src="/img/projects/vitalstudio.png" alt="Vital Studio Project Screenshoot" class="portfolio__container__left-box__image__link__img">
+                        <img src="/img/projects/vitalstudio2.png" alt="Vital Studio Project Screenshoot" class="portfolio__container__left-box__image__link__img-lg">
                     </a>
                 </div>
                 <div class="portfolio__container__left-box__content">
