--- a/about.html
+++ b/about.html
@@ -29,8 +29,7 @@
             <a href="index.html" class="nav__item">Home</a>
             <a href="#" class="nav__item">About Me</a>
             <a href="portfolio.html" class="nav__item">Portfolio</a>
-            <a href="#" class="nav__item">Offer</a>
-            <a href="#" class="nav__item">Contact</a>
+            <a href="contact.html" class="nav__item">Contact</a>
         </div>
     </nav>  
     <section class="about">
