--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <a href="#" class="nav__item">Home</a>
             <a href="about.html" class="nav__item">About Me</a>
             <a href="portfolio.html" class="nav__item">Portfolio</a>
-            <a href="#" class="nav__item">Offer</a>
-            <a href="#" class="nav__item">Contact</a>
+            <a href="contact.html" class="nav__item">Contact</a>
         </div>
     </nav>
     <header class="header">
