--- a/portfolio.html
+++ b/portfolio.html
@@ -29,26 +29,38 @@
             <a href="index.html" class="nav__item">Home</a>
             <a href="about.html" class="nav__item">About Me</a>
             <a href="#" class="nav__item">Portfolio</a>
-            <a href="#" class="nav__item">Offer</a>
-            <a href="#" class="nav__item">Contact</a>
+            <a href="contact.html" class="nav__item">Contact</a>
         </div>
     </nav>  
     <section class="portfolio">
         <h1 class="portfolio__title">My <span class="blue-color">Portfolio</span></h1>
-        <p class="portfolio__text">Check my <span class="blue-color">Projects</span></p>
+        <p class="portfolio__text">Check my <span class="blue-color">Projects.</span></p>
 
         <div class="portfolio__container">
             <div class="portfolio__container__left-box">
                 <div class="portfolio__container__left-box__image">
                     <a href="http://www.vitalstudio.krakow.pl" rel="noopener" target="_blank" class="portfolio__container__left-box__image__link">
-                        <img src="/img/projects/vitalstudio.png" alt="Vital Studio Project Screenshoot" class="portfolio__container__left-box__image__link__img">
-                        <img src="/img/projects/vitalstudio2.png" alt="Vital Studio Project Screenshoot" class="portfolio__container__left-box__image__link__img-lg">
+                        <img src="/img/projects/vitalstudio-min.png" alt="Vital Studio Project Screenshoot" class="portfolio__container__left-box__image__link__img">
+                        <img src="/img/projects/vitalstudio2-min.png" alt="Vital Studio Project Screenshoot" class="portfolio__container__left-box__image__link__img-lg">
                     </a>
                 </div>
                 <div class="portfolio__container__left-box__content">
                     <h2 class="portfolio__container__left-box__content__title">Vital Studio Kraków</h2>
                     <p class="portfolio__container__left-box__content__text"> Website created for the Vital Studio Kraków company. I used technologies such as HTML, CSS, Java Script and Bootstrap to create the project.</p>
                     <a href="http://www.vitalstudio.krakow.pl" rel="noopener" target="_blank" class="portfolio__container__left-box__content__btn">View Project</a>
+                </div>
+            </div>
+            <div class="portfolio__container__left-box">
+                <div class="portfolio__container__left-box__image">
+                    <a href="http://vitalstudio.damianplatek.com" rel="noopener" target="_blank" class="portfolio__container__left-box__image__link">
+                        <img src="/img/projects/lamborghini-min.png" alt="Lamborghini Club Project Screenshoot" class="portfolio__container__left-box__image__link__img">
+                        <img src="/img/projects/lamborghini2-min.png" alt="Lamborghini Club Project Screenshoot" class="portfolio__container__left-box__image__link__img-lg">
+                    </a>
+                </div>
+                <div class="portfolio__container__left-box__content">
+                    <h2 class="portfolio__container__left-box__content__title">Lamborghini Club</h2>
+                    <p class="portfolio__container__left-box__content__text"> Website created for the Lamborghini Club. I used technologies such as HTML, CSS, Java Script to create the project.</p>
+                    <a href="http://vitalstudio.damianplatek.com" rel="noopener" target="_blank" class="portfolio__container__left-box__content__btn">View Project</a>
                 </div>
             </div>
         </div>
