Removed some icons from about page

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <div class="portfolio__container">
             <div class="portfolio__container__left-box">
                 <div class="portfolio__container__left-box__image">
-                    <a href="http://www.vitalstudio.krakow.pl" rel="noopener" target="_blank" class="portfolio__container__left-box__image__link">
+                    <a href="http://www.vitalstudio.krakow.pl" rel="noopener" rel="noreferrer" target="_blank" class="portfolio__container__left-box__image__link">
                         <img src="/img/projects/vitalstudio-min.png" alt="Vital Studio Project Screenshoot" class="portfolio__container__left-box__image__link__img">
                         <img src="/img/projects/vitalstudio2-min.png" alt="Vital Studio Project Screenshoot" class="portfolio__container__left-box__image__link__img-lg">
                     </a>
@@ -47,12 +47,12 @@
                 <div class="portfolio__container__left-box__content">
                     <h2 class="portfolio__container__left-box__content__title">Vital Studio Kraków</h2>
                     <p class="portfolio__container__left-box__content__text"> Website created for the Vital Studio Kraków company. I used technologies such as HTML, CSS, Java Script and Bootstrap to create the project.</p>
-                    <a href="http://www.vitalstudio.krakow.pl" rel="noopener" target="_blank" class="portfolio__container__left-box__content__btn">View Project</a>
+                    <a href="http://www.vitalstudio.krakow.pl" rel="noopener"  rel="noreferrer" target="_blank" class="portfolio__container__left-box__content__btn">View Project</a>
                 </div>
             </div>
             <div class="portfolio__container__left-box">
                 <div class="portfolio__container__left-box__image">
-                    <a href="http://vitalstudio.damianplatek.com" rel="noopener" target="_blank" class="portfolio__container__left-box__image__link">
+                    <a href="http://vitalstudio.damianplatek.com" rel="noopener" rel="noreferrer" target="_blank" class="portfolio__container__left-box__image__link">
                         <img src="/img/projects/lamborghini-min.png" alt="Lamborghini Club Project Screenshoot" class="portfolio__container__left-box__image__link__img">
                         <img src="/img/projects/lamborghini2-min.png" alt="Lamborghini Club Project Screenshoot" class="portfolio__container__left-box__image__link__img-lg">
                     </a>
@@ -60,7 +60,7 @@
                 <div class="portfolio__container__left-box__content">
                     <h2 class="portfolio__container__left-box__content__title">Lamborghini Club</h2>
                     <p class="portfolio__container__left-box__content__text"> Website created for the Lamborghini Club. I used technologies such as HTML, CSS, Java Script to create the project.</p>
-                    <a href="http://vitalstudio.damianplatek.com" rel="noopener" target="_blank" class="portfolio__container__left-box__content__btn">View Project</a>
+                    <a href="http://vitalstudio.damianplatek.com" rel="noopener" rel="noreferrer" target="_blank" class="portfolio__container__left-box__content__btn">View Project</a>
                 </div>
             </div>
         </div>
